tests/lean/tokenErrors.lean
#check 'hi
example : Nat := 0  -- recover

#check '\y'
example : Nat := 0  -- recover

#check "hi
example : Nat := 0  -- recover

#check hi.«
example : Nat := 0  -- recover

/--
example : Nat := 0  -- recover

#print Nat
/-
